fixed secondary pane overflow issue

--- a/src/assets/scss/canvas.scss
+++ b/src/assets/scss/canvas.scss
@@ -4,6 +4,6 @@
     margin-left: 3%;
 }
 
-.splitter-layout .layout-pane{
+.splitter-layout .layout-pane-primary{
     overflow: hidden !important;
 }
